--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "codebyte.re",
+  "name": "Termi",
   "version": "1.0.0",
-  "description": "codebytere's personal website",
+  "description": "Raghav_Goel's Personal Portfolio",
   "main": "js/cli.js",
   "scripts": {
     "dev": "http-server -o",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/codebytere/codebytere.github.io.git"
+    "url": "git+https://github.com/raghav2130/Termi-portfolio.git"
   },
-  "author": "Shelley Vohr <shelley.vohr@gmail.com>",
+  "author": "Raghav Goel <crown.rg7244@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/codebytere/codebytere.github.io/issues"
+    "url": "https://github.com/raghav2130/Termi-portfolio/issues"
   },
-  "homepage": "https://github.com/codebytere/codebytere.github.io#readme",
+  "homepage": "https://github.com/raghav2130/Termi-portfolio#readme",
   "devDependencies": {
     "http-server": "^14.1.1",
     "prettier": "^2.0.2"
